# Search-Engine

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
API/: .gitignore
API/app/controllers/: search_controller.rb
API/config/: routes.rb
API/tmp/cache/bootsnap/compile-cache-iseq/d3/: 767f4d91667c7d
API/tmp/cache/bootsnap/compile-cache-iseq/fa/: a3180d44a240ef
cpp/crawler/: CMakeCache.txt  CTestTestfile.cmake  Dockerfile  Makefile  cmake_install.cmake  test_crawler
cpp/crawler/Testing/Temporary/: CTestCostData.txt
cpp/crawler/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  crawler  test_crawler
cpp/crawler/build_test/Testing/Temporary/: CTestCostData.txt
cpp/crawler/src/: CMakeLists.txt  main.cpp  warc_writer.cpp  warc_writer.hpp
cpp/crawler/tests/: test_warc_writer.cpp
cpp/indexer/: Dockerfile
cpp/indexer/src/: main.cpp  utils.cpp
data/: init.sql
data/crawled_pages/: doc_1.html
python/ranker/: Dockerfile  app.py  engine.py  requirements.txt
